# app/controllers/api/users_controller.rb
@@ -1,5 +1,15 @@
 class Api::UsersController < ApplicationController
     include Response
+
+    # POST /api/users
+    def create
+      user = User.new(user_params)
+      if user.save
+        render_success(user)
+      else
+        render_error(user.errors.full_messages.join(', '), :unprocessable_entity)
+      end  
+    end
   
     # GET /api/users
     def index
@@ -14,13 +24,14 @@ class Api::UsersController < ApplicationController
     # GET /api/users/:id
     def show
       user = User.find(params[:id])
-      render_success(
-        id: user.id,
-        name: user.name,
-        cash_balance: user.cash_balance.to_f
-      )
+      render_success(user)
     rescue ActiveRecord::RecordNotFound
       render_error("User not found", :not_found)
+    end
+
+    private
+    def user_params
+      params.permit(:name, :phone_number, :cash_balance)
     end
 
   end
