# app/models/user.rb
@@ -1,7 +1,7 @@
 class User < ApplicationRecord
     has_many :orders
     validates :name, presence: true
-    validates :phone_number, presence: true, uniqueness: true
+    validates :phone_number, presence: true, uniqueness: true, length: { is: 10 }
     def as_json(options = {})
     super(options).merge(
       cash_balance: cash_balance.to_f
